	  with CPUs the provide MCUs and support process-like address environments).
	* arch/z80/src/z180/z180_mmu.*:  Add MMU support for z180 tasks.
	* configs/p112:  Add very basic board support and an examples/ostest
	  configuration for the venerable P112 board.
	* sched/os_bringup.c: If CONFIG_PATH_INITIAL is defined, then the initial
	  environment of the task started by os_bringup() will have the PATH
	  environment variable defined to be that string.
	* binfmt/binfmt_exepath.c:  If CONFIG_BINFMT_EXEPATH is defined, then this
	  file will be built.  It contains logic to search for regular files at
	  the absolutes paths found in the current PATH environment variable
	  setting.  This is untested and not yet hooked into the binfmt exec()
	  logic on initial check-in
	* binfmt/binfmt_loadmodule.c: load_module() will now traverse the PATH
	  variable to locate files from their relative path.
	* include/nuttx/arch.h and arch/z80/src/z180/z180_mmu.c:  Restructure the
	  address environment interfaces so that they will better integrate with
	  binfmt/.
	* binfmt/libelf/*, binfmt/libnxflat/* and other files:  Integrate the
	  address environment interfaces.  If CONFIG_ADDRENV=y, then binfmt/
	  will now create an address environment for new tasks (instead of
	  just malloc'ing the task memory).
	* configs/stm32f4discovery/elf:  Enable support/test of the PATH
	  to find executables using a relative path.

6.25 2013-xx-xx Gregory Nutt <gnutt@nuttx.org>

	* graphics/: Adds 5x8 monospace font. This tiny font is useful for graph
	  labels and for small bitmapped display.  Contributed by Petteri
	  Aimonen.
	* configs/stm3220g-eval/nxwm:  Converted to use the kconfig-frontends
	  configuration tool.
	* configs/sim/nxwm:  Converted to use the kconfig-frontends configuration
	  tool.
	* include/pthread.h:  In sys/prctl.h because it is needed by
	  pthread_[set|get]name_np()
	* tools/kconfig.bat:  Kludge to run kconfig-frontends from a DOS shell.
